# pigzbench

./: README.MD  _a_compile_dynamic.py  _install_corpus.py  a_compile.py  b_speed_threads.py  c_decompress.py  d_speed_size.py  e_test_mgzip.py  f_speed_size_decompress.py
pigz/: CMakeLists.txt
pigz/win/: unistd.h
pigz/win/sys/: time.h
